@@ -5,7 +5,7 @@
   <title>Master GLI Server Setup</title>
 </head>
 <body>
-<table>
+<table cellpadding="0" cellspacing="5">
   <tr>
     <td width=130>Picture here. Gentoo Logo</td>
     <td><img src="banner-800x64.png"></td>
@@ -13,25 +13,25 @@
   <tr>
     <td valign-"top">
       <!-- Left hand column starts here -->
-      <p><a href="mastergli.php?page=Welcome">Welcome</a></p>
+      <p><a href="/welcome">Welcome</a></p>
       <p>Profiles:<br>
       <a href="mastergli.php?page=CreateProfile">Create</a><br>
       <a href="mastergli.php?page=EditProfile">Edit</a><br>
       <a href="mastergli.php?page=DeleteProfile">Delete</a></p>
       <p>Clients:<br>
       <a href="mastergli.php?page=AddClient">Add Client</a><br>
-      <a href="mastergli.php?page=ManageClients">Manage</a><br>
+      <a href="/showclients">Manage</a><br>
       <a href="mastergli.php?page=DeleteClient">Delete</a></p>
       <p>Install:<br>
       <a href="mastergli.php?page=Configure">Configure</a><br>
       <a href="mastergli.php?page=Execute">Execute</a><br>
       <a href="mastergli.php?page=Status">Status</a></p>
       <p>Master Server:<br>
-      <a href="mastergli.php?page=LoadMasterProfile">Load Profile</a><br>
+      <a href="/loadprofile">Load Profile</a><br>
       <a href="mastergli.php?page=SaveMasterProfile">Save Profile</a></p>
       </p>
     </td>
-    <td>
+    <td valign="top">
 Main content
     </td>
   </tr>
