@@ -1,7 +1,7 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2005-2005 Gentoo Technologies, Inc.
 
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.396 2005/09/30 00:12:51 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.397 2005/09/30 02:06:13 agaffney Exp $
 
 *GLI-0.2 (4 Aug 2005)
 
@@ -10,6 +10,10 @@
   now handles POST requests
   move majority of request handling code to common_handler() to reduce code
   duplication
+  profile loading
+  client reg via XMLRPC goes into SharedInfo()
+  /showclients redesign
+  template fixes
 
   28 Sep 2005; Andrew Gaffney <agaffney@gentoo.org>
   src/net/server/GLIClientsProfiles.py:
